--- a/templates/base.html
+++ b/templates/base.html
@@ -5,13 +5,9 @@
     <title>Sistema Académico</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
-<body>
-    <nav class="navbar navbar-dark bg-dark">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="{{ url_for('estudiantes.lista_estudiantes') }}">🎓 Estudiantes</a>
-        </div>
-    </nav>
-    <div class="container mt-4">
+<body style="background-color: #F4F1DE;">
+    
+    <div class="container ">
         {% block content %}{% endblock %}
     </div>
 </body>
