--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,7 @@
     <nav class="navbar navbar-dark bg-dark">
         <div class="container-fluid">
             <a class="navbar-brand" href="{{ url_for('estudiantes.lista_estudiantes') }}">🎓 Estudiantes</a>
+            <a class="navbar-brand" href="{{ url_for('user.user_index') }}">🎓 usuarios</a>
         </div>
     </nav>
     <div class="container mt-4">
