Subiendo cambios en consultar clientes, agregar, etc y diseño

--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,7 @@
             <a class="navbar-brand" href="{{ url_for('user.user_index') }}">🎓 usuarios</a>
         </div>
     </nav>
-    <div class="container mt-4">
+    <div class="container mt-4 p-3">
         {% block content %}{% endblock %}
     </div>
 </body>
