Gestion de secciones terminado, agregar, editar eliminar

--- a/templates/base.html
+++ b/templates/base.html
@@ -9,10 +9,10 @@
     
     <div class="container ">
 <body>
-    <nav class="navbar navbar-dark bg-dark">
+    <nav >
         <div class="container-fluid">
-            <a class="navbar-brand" href="{{ url_for('estudiantes.lista_estudiantes') }}">🎓 Estudiantes</a>
-            <a class="navbar-brand" href="{{ url_for('user.user_index') }}">🎓 usuarios</a>
+           
+            <a class="navbar-brand" href="{{ url_for('user.user_index') }}"></a>
         </div>
     </nav>
     <div class="container mt-4 p-3">
