--- a/templates/base.html
+++ b/templates/base.html
@@ -44,6 +44,9 @@
                             </li>
                         {% endif %}
                         <li class="nav-item">
+                            <a class="nav-link" href="{{ url_for('change_password.cambiar_contrasena') }}">Cambiar Contraseña</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-danger" href="{{ url_for('auth.logout') }}">Salir</a>
                         </li>
                     {% endif %}
