--- a/templates/usuarios/user_index.html
+++ b/templates/usuarios/user_index.html
@@ -54,12 +54,18 @@
                 </div>
             </td>
             <td>
-                <span class="role-badge {% if d.id_rol == 1 %}role-admin{% else %}role-teacher{% endif %}">
-                    {% if d.id_rol == 1 %}
-                    <i class="fas fa-shield-alt"></i> Admin
-                    {% else %}
-                    <i class="fas fa-chalkboard-teacher"></i> Docente
+                
+                  {% for rol in list_rol %}
+                    {% if d.id_rol == rol.id_rol %}
+                      {% if rol.nombre_rol == "Administrador" or rol.nombre_rol == "Administrativa"  %}
+                        <span class="text-danger"><i class="fa fa-shield"></i> {{rol.nombre_rol}}</span>
+                      {% else %}
+                        <span class="text-primary"><i class="fas fa-user"></i> {{rol.nombre_rol}}</span>
+                      {% endif %}
                     {% endif %}
+
+                  {% endfor %}
+
                 </span>
             </td>
             <td>
@@ -190,13 +196,13 @@
             <div class="d-flex justify-content-between align-items-center">
               
               <!-- Botón Editar en cada card de rol -->
-              <button type="button" class="btn btn-warning btn-sm btn-edit-rol"
+              <button type="button" class="btn btn-edit btn-warning btn-sm btn-edit-rol"
                       data-bs-toggle="modal" data-bs-target="#modalEditarRol"
                       data-id="{{ rol.id_rol }}"
                       data-nombre="{{ rol.nombre_rol|escape }}"
                       data-descripcion="{{ rol.descripcion|escape }}"
                       data-estado="{{ rol.estado }}">
-                  <i class="fas fa-edit"></i> Editar
+                  <i class=" fas fa-edit"></i> Editar
               </button>
 
             </div>
